--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Date Spot</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    
+    <color name="magenta">#ff00ff</color>
+    <string name="str_btn_find">Find</string>
+    <string name="hnt_et_location">Enter location</string>
 </resources>
